# HTTP-Server

./: .gitmodules  LICENSE  README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle  build.gradle.kts
app/include/armeabi-v7a/event2/: event-config.h
app/include/x86/event2/: event-config.h
app/include/x86_64/event2/: event-config.h
app/src/androidTest/java/com/streamingnology/httpserver/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: C.h  CMakeLists.txt  HttpServer.cpp  HttpServer.h  HttpServerJNI.cpp  HttpServerJNI.h  IHttpServer.cpp  IHttpServer.h  Log.cpp  Log.h  MageResults.cpp  MageResults.h  MageTypes.h  httpserver.cpp
app/src/main/cpp/asio2-2.8/: CMakeLists.txt
app/src/main/cpp/asio2-2.8/example/: CMakeLists.txt
app/src/main/cpp/asio2-2.8/example/http/client/: CMakeLists.txt
app/src/main/cpp/asio2-2.8/example/http/server/: CMakeLists.txt
app/src/main/cpp/asio2-2.8/include/asio2/http/detail/: mime_types.hpp
app/src/main/cpp/asio2-2.8/test/bench/: CMakeLists.txt
app/src/main/cpp/cmake/: libevent.cmake  nlohmann_json.cmake  util.cmake
app/src/main/cpp/src/: HttpServer.cpp  HttpServer.h  HttpServerJNI.cpp  log.h
app/src/main/cpp/src/actions/: directory.cpp  directory.h
app/src/main/cpp/src/resources/: res.h
app/src/main/java/com/streamingnology/httpserver/: GetIPAddressUtil.java  HTTPServer.java  HttpServer.java  MainActivity.java  PlaceholderFragment.java  WifiReceiver.java
app/src/main/java/com/streamingnology/httpserver/ui/dashboard/: DashboardFragment.java  DashboardViewModel.java
app/src/main/java/com/streamingnology/httpserver/ui/home/: HomeFragment.java  HomeViewModel.java
app/src/main/java/com/streamingnology/httpserver/ui/notifications/: NotificationsFragment.java  NotificationsViewModel.java
app/src/main/res/layout/: activity_main.xml  fragment_about.xml  fragment_mainpage.xml  fragment_settings.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: settings.xml
app/src/test/java/com/streamingnology/httpserver/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
